# MLOps_course_lab1

./: .pre-commit-config.yaml  .sops.yaml  README.md  app.py  inference.py  main.py  pyproject.toml  secrets.yaml  settings.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: conftest.py  routes_test.py  test_settings.py
