[project]
name = "mlops-course-lab1"
version = "0.1.0"
description = "MLOps introduction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib",
    "pandas",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.42.0",
]
